# pick_and_place

./: README.md
pick_and_place_description/: CMakeLists.txt  package.xml
pick_and_place_description/config/: robot_controller.yaml
pick_and_place_description/launch/: start_control.launch.py  start_gazebo.launch.py  start_ignition.launch.py  visualize_robot.launch.py
pick_and_place_description/rviz/: visualize_robot.rviz
pick_and_place_description/urdf/: robot_arm.xacro  test.urdf  turtlebot_arm.urdf  turtlebot_arm.xacro
pick_and_place_detection/: package.xml  setup.cfg  setup.py
pick_and_place_detection/dataset/: data.yaml
pick_and_place_detection/pick_and_place_detection/: object_detect.py  object_pose_detector.py
pick_and_place_moveit_config/: CMakeLists.txt  package.xml
pick_and_place_moveit_config/config/: chomp_planning.yaml  controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
pick_and_place_moveit_config/launch/: start_moveit.launch.py
pick_and_place_moveit_config/rviz/: view_robot.rviz
pick_and_place_moveit_config/srdf/: robot_arm.srdf
pick_and_place_simulation/: CMakeLists.txt  package.xml
pick_and_place_simulation/launch/: start_simulation.launch.py
pick_and_place_simulation/world/: gym.world
pick_and_place_test_nodes/: CMakeLists.txt  package.xml
pick_and_place_test_nodes/launch/: start_cartesian_space_moveit.launch.py  start_joint_space_moveit.launch.py  start_pick_and_place.launch.py  start_planning_scene.launch.py
pick_and_place_test_nodes/src/: test_add_virtual_obstacles.cpp  test_pick_and_place.cpp  test_send_cartesian_goal.cpp  test_send_joint_space_goal.cpp  test_sending_trajectory.cpp
(+33 files in other folders)
